--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 html, body {
   font-size: 62.5%;
-  height: 100%; }
+  min-height: 100%; }
 
 body {
   line-height: 1.5;
@@ -30,10 +30,16 @@ body {
   justify-content: center;
   background-color: #FA7070;
   font-family: sans-serif;
-  padding-top: 20px; }
+  padding-top: 20px;
+  background: #c31432;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(#c31432, #240b36);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(#c31432, #240b36);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
 
 .nav {
-  padding: 0px 20px;
+  padding: 0px 50px;
   height: 20%;
   width: 80%;
   display: flex;
@@ -41,7 +47,7 @@ body {
   align-items: center; }
   .nav__logo {
     height: 100%;
-    width: 170px;
+    width: 120px;
     display: flex; }
     .nav__logo > img {
       width: 100%; }
@@ -52,18 +58,20 @@ body {
     justify-content: flex-end;
     align-items: center; }
     .nav__links--l, .nav__links--l:active, .nav__links:focus {
-      font-size: 2rem;
+      font-size: 1.6rem;
+      padding: 8px 25px;
       border: none;
       text-decoration: none;
       text-transform: uppercase;
       letter-spacing: 1.2px;
       color: #f5f5f5;
       font-weight: 700; }
+      .nav__links--l:nth-child(1), .nav__links--l:active:nth-child(1), .nav__links:focus:nth-child(1) {
+        border-bottom: 1.5px solid #A1C298; }
       .nav__links--l:nth-child(2), .nav__links--l:active:nth-child(2), .nav__links:focus:nth-child(2) {
         margin: 0px 40px; }
     .nav__links--events {
       background: #A1C298;
-      padding: 8px 25px;
       border-radius: 5px;
       box-shadow: rgba(30, 30, 30, 0.5) 0px 2px 8px 0px;
       display: flex;
