--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@
   }
   html, body {
     font-size: 62.5%;
-    height: 100%;
+    min-height: 100%;
   }
   body {
     line-height: 1.5;
@@ -33,11 +33,16 @@
     background-color: #FA7070;
     font-family: sans-serif;
     padding-top: 20px;
+
+    background: #c31432;  /* fallback for old browsers */
+background: -webkit-linear-gradient(  #c31432, #240b36);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(  #c31432, #240b36); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   }
 
   .nav{
     // border: 1px solid red;
-    padding: 0px 20px;
+    padding: 0px 50px;
     height: 20%;
     width: 80%;
     display: flex;
@@ -47,7 +52,7 @@
     &__logo{
         // border: 1px solid blue;
         height: 100%;
-        width: 170px;
+        width: 120px;
         
         display: flex;
 
@@ -66,7 +71,9 @@
         align-items: center;
 
         &--l,&--l:active, &:focus{
-            font-size: 2rem;
+            font-size: 1.6rem;
+            padding: 8px 25px;
+
             border: none;
             text-decoration: none;
             text-transform: uppercase;
@@ -74,6 +81,9 @@
             color: #f5f5f5;
             font-weight: 700;
 
+            &:nth-child(1){
+              border-bottom: 1.5px solid #A1C298;
+          }
 
             &:nth-child(2){
                 margin: 0px 40px;
@@ -82,7 +92,7 @@
 
         &--events{
             background: #A1C298;
-            padding: 8px 25px;
+
             border-radius: 5px;
             box-shadow: rgba(30, 30, 30, .5) 0px 2px 8px 0px;
             display: flex;
