--- a/css/style.css
+++ b/css/style.css
@@ -26,21 +26,23 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate; }
 
 body {
-  display: flex;
-  justify-content: center;
-  background-color: #FA7070;
   font-family: sans-serif;
-  padding-top: 20px;
-  background: #c31432;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(#c31432, #240b36);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(#c31432, #240b36);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */ }
+  font-family: 'Raleway', sans-serif;
+  overflow-x: hidden; }
+
+.first-section {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 35px;
+  background-color: #FA7070; }
 
 .nav {
   padding: 0px 50px;
-  height: 20%;
+  height: 15%;
   width: 80%;
   display: flex;
   justify-content: space-between;
@@ -58,7 +60,7 @@ body {
     justify-content: flex-end;
     align-items: center; }
     .nav__links--l, .nav__links--l:active, .nav__links:focus {
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       padding: 8px 25px;
       border: none;
       text-decoration: none;
@@ -67,11 +69,16 @@ body {
       color: #f5f5f5;
       font-weight: 700; }
       .nav__links--l:nth-child(1), .nav__links--l:active:nth-child(1), .nav__links:focus:nth-child(1) {
-        border-bottom: 1.5px solid #A1C298; }
+        border-bottom: 1.5px solid #232526; }
       .nav__links--l:nth-child(2), .nav__links--l:active:nth-child(2), .nav__links:focus:nth-child(2) {
         margin: 0px 40px; }
     .nav__links--events {
       background: #A1C298;
+      background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC 51%, #02AAB0 100%);
+      background-image: linear-gradient(to right, #232526 0%, #414345 51%, #232526 100%);
+      transition: 0.5s;
+      background-size: 200% auto;
+      color: #f5f5f5;
       border-radius: 5px;
       box-shadow: rgba(30, 30, 30, 0.5) 0px 2px 8px 0px;
       display: flex;
@@ -80,7 +87,115 @@ body {
       transition: all .2s ease; }
       .nav__links--events:hover {
         transform: translateY(-2px);
-        box-shadow: rgba(30, 30, 30, 0.8) 0px 2px 8px 0px; }
+        background-position: right center;
+        /* change the direction of the change here */
+        color: #f5f5f5;
+        text-decoration: none; }
       .nav__links--events:active {
         transform: translateY(1px);
         box-shadow: rgba(30, 30, 30, 0.4) 0px 2px 8px 0px; }
+
+.event {
+  width: 80%;
+  height: 72.5%;
+  position: relative;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 8px 32px 0 rgba(61, 64, 105, 0.25);
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18); }
+  .event > h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 5rem;
+    font-weight: 700;
+    color: #f5f5f5;
+    background: #A1C298;
+    border-radius: 10px 10px 0px 0px;
+    background-image: linear-gradient(to right, #232526 0%, #414345 51%, #232526 100%);
+    background-size: 400% 400%;
+    -moz-text-fill-color: transparent;
+    height: 20%; }
+  .event__container {
+    width: 100%;
+    height: 80%;
+    border-radius: 10px;
+    display: grid;
+    grid-template-rows: 100px, 1fr;
+    grid-template-columns: repeat(2, 1fr); }
+    .event__container--info {
+      padding: 40px; }
+      .event__container--info_name > h3 {
+        font-size: 1.3rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 1.5px;
+        color: #fbfbfb; }
+      .event__container--info_name > h2 {
+        font-size: 3rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        letter-spacing: 1.5px;
+        color: black; }
+    .event__container--img {
+      display: flex;
+      align-items: flex-end;
+      background-image: url(/images/1665786212385.jpg);
+      background-position: center;
+      background-size: cover;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      overflow: none; }
+      .event__container--img > img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        filter: grayscale(100%);
+        -webkit-filter: grayscale(100%);
+        transition: 1s ease; }
+        .event__container--img > img:hover {
+          filter: grayscale(0%);
+          -webkit-filter: grayscale(0%); }
+
+.blob {
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  position: absolute;
+  border: none;
+  left: 80px;
+  bottom: 10px;
+  z-index: 1;
+  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%); }
+  .blob:nth-child(2) {
+    width: 125px;
+    height: 125px;
+    left: 300px;
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%), radial-gradient(at top center, rgba(255, 255, 255, 0.4) 0%, rgba(0, 0, 0, 0.4) 120%) #989898;
+    background-blend-mode: multiply,multiply;
+    top: 300px; }
+  .blob:nth-child(3) {
+    width: 100px;
+    height: 100px;
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    left: 650px;
+    bottom: 50px; }
+
+.second-section {
+  width: 100%;
+  height: 100vh;
+  background-color: white; }
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 50%; }
+  100% {
+    background-position: 0% 50%; } }
