--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,13 @@
 
+//! COLORS
+
+$landing-color: #FA7070;
+$green-color: #00CDAC;
+$white-color: #f5f5f5;
+
+
+
+
 *, *::before, *::after {
     box-sizing: border-box;
   }
@@ -28,22 +37,36 @@
   }
 
   body{
-    display: flex;
-    justify-content: center;
-    background-color: #FA7070;
-    font-family: sans-serif;
-    padding-top: 20px;
 
-    background: #c31432;  /* fallback for old browsers */
-background: -webkit-linear-gradient(  #c31432, #240b36);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(  #c31432, #240b36); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    // justify-content: center;
+    // background-color: $landing-color;
+    font-family: sans-serif;
+    font-family: 'Raleway', sans-serif;
+
+    overflow-x: hidden;
+
+//     background: #c31432;  /* fallback for old browsers */
+// background: -webkit-linear-gradient(  #c31432, #240b36);  /* Chrome 10-25, Safari 5.1-6 */
+// background: linear-gradient(  #c31432, #240b36); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  }
+
+  .first-section{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 35px;
+    background-color: $landing-color;
 
   }
 
   .nav{
     // border: 1px solid red;
     padding: 0px 50px;
-    height: 20%;
+    height: 15%;
     width: 80%;
     display: flex;
     justify-content: space-between;
@@ -71,18 +94,18 @@ background: linear-gradient(  #c31432, #240b36); /* W3C, IE 10+/ Edge, Firefox 1
         align-items: center;
 
         &--l,&--l:active, &:focus{
-            font-size: 1.6rem;
+            font-size: 1.5rem;
             padding: 8px 25px;
 
             border: none;
             text-decoration: none;
             text-transform: uppercase;
             letter-spacing: 1.2px;
-            color: #f5f5f5;
+            color: $white-color;
             font-weight: 700;
 
             &:nth-child(1){
-              border-bottom: 1.5px solid #A1C298;
+              border-bottom: 1.5px solid #232526;
           }
 
             &:nth-child(2){
@@ -92,6 +115,15 @@ background: linear-gradient(  #c31432, #240b36); /* W3C, IE 10+/ Edge, Firefox 1
 
         &--events{
             background: #A1C298;
+          background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC  51%, #02AAB0  100%);
+    background-image: linear-gradient(to right, #232526 0%, #414345  51%, #232526  100%);
+
+          transition: 0.5s;
+          background-size: 200% auto;
+          color: $white-color;
+          
+          // background-image: linear-gradient(to right, #232526 0%, #414345  51%, #232526  100%);
+      
 
             border-radius: 5px;
             box-shadow: rgba(30, 30, 30, .5) 0px 2px 8px 0px;
@@ -102,7 +134,10 @@ background: linear-gradient(  #c31432, #240b36); /* W3C, IE 10+/ Edge, Firefox 1
 
             &:hover{
                 transform: translateY(-2px);
-            box-shadow: rgba(30, 30, 30, .8) 0px 2px 8px 0px;
+                background-position: right center; /* change the direction of the change here */
+                color: $white-color;
+                text-decoration: none;
+            // box-shadow: rgba(30, 30, 30, .8) 0px 2px 8px 0px;
             }
             &:active{
                 transform: translateY(1px);
@@ -113,5 +148,195 @@ background: linear-gradient(  #c31432, #240b36); /* W3C, IE 10+/ Edge, Firefox 1
     }
 
     
+  }
+
+  .event{
+    width: 80%;
+    height: 72.5%;
+    position: relative;
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+    // background-color: #A1C298;
+
+    // background: rgba( 250, 112, 112, 0.4 );
+    // background: rgba( 255, 255, 255, 0.1 );
+
+    box-shadow: 0 8px 32px 0 rgba(61, 64, 105, 0.25);
+    backdrop-filter: blur( 6px );
+    -webkit-backdrop-filter: blur( 6px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+
+
+    & > h2 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 5rem;
+      font-weight: 700;
+      color: $white-color;
+      background: #A1C298;
+      // background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC  51%, #02AAB0  100%);
+      border-radius: 10px 10px 0px 0px;
+    background-image: linear-gradient(to right, #232526 0%, #414345  51%, #232526  100%);
+
+      // background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+      background-size: 400% 400%;
+    //   background: #A1C298;
+    //   background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC  51%, #02AAB0  100%);
+    // background-size: 100%;
+    // -webkit-background-clip: text;
+    // -moz-background-clip: text;
+    // -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+    // animation: gradient 15s linear infinite;
+
+
+      height: 20%;
+
+
+    }
+
+    &__container{
+      width: 100%;
+      height:80%;
+      // border: 1px solid red;
+      border-radius: 10px;
+      display: grid;
+      grid-template-rows: 100px, 1fr;
+      grid-template-columns: repeat(2, 1fr);
+      // overflow: none;
+
+
+      &--info{
+        padding: 40px;
+        // border: 1px solid red;
+
+        &_name{
+        & > h3{
+
+          font-size: 1.3rem;
+          font-weight: 300;
+          text-transform: uppercase;
+          letter-spacing: 1.5px;
+          color: #fbfbfb;
+        }
+
+        & > h2{
+
+          font-size: 3rem;
+          font-weight: 700;
+          text-transform: uppercase;
+          letter-spacing: 1.5px;
+          color: black;
+          
+        }
+      }
+      }
+
+        &--img{
+          display: flex;
+          align-items: flex-end;
+          // border: 1px solid blue;
+          background-image: url(/images/1665786212385.jpg);
+          background-position: center;
+          background-size: cover;
+          width: 100%;;
+          height: 100%;
+          // border: 1px solid blue;
+          // border-radius: 0px 10px 10px 0px;
+          position: relative;
+          overflow: none;
+
+          // &-overlay{
+          //   width: 100%;
+          //   height: 100%;
+          //   position: absolute;
+          //   z-index: 10;
+          //   background: black;
+          //   // opacity: .6;
+
+          //   border-radius: 10px;
+          // }
+
+          & > img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+
+          // border-radius: 0px 10px 10px 0px; 
+          filter: grayscale(100%);
+          -webkit-filter: grayscale(100%);
+          transition: 1s ease;
+
+
+          &:hover{
+            filter: grayscale(0%);
+          -webkit-filter: grayscale(0%);
+          }
+          }
+        }
+      
+    }
+   
+  }
+
+
+  //! BLOB
+
+  .blob{
+    width: 150px;
+    height: 150px;
+    border-radius: 100%;
+    position: absolute;
+    border: none;
+    left: 80px;
+    bottom: 10px;
+    z-index: 1;
+    background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+
+    &:nth-child(2){
+      width: 125px;
+      height: 125px;
+      left: 300px;
+      background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+      background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
+      background-blend-mode: multiply,multiply;
+      top: 300px;
+    }
+
+
+    &:nth-child(3){
+      width: 100px;
+      height: 100px ;
+      background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+      
+      left: 650px;
+      bottom: 50px;
+    }
+  }
+
+
+  .second-section{
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+  }
+
+
+
+
+
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
   }
 
