--- a/css/style.css
+++ b/css/style.css
@@ -89,8 +89,6 @@ body {
       .nav__links--l:nth-child(2), .nav__links--l:active:nth-child(2), .nav__links:focus:nth-child(2) {
         margin: 0px 40px; }
     .nav__links--events {
-      background: #a1c298;
-      background-image: linear-gradient(to right, #02aab0 0%, #00cdac 51%, #02aab0 100%);
       background-color: #ff9a8b;
       background-image: linear-gradient(90deg, #ff9a8b 0%, #ff6a88 55%, #ff99ac 100%);
       transition: 0.5s;
@@ -178,8 +176,48 @@ body {
         background: #fe9a8b;
         clip-path: polygon(0 -1%, 103% -1%, 103% 103%, 27.5% 103%); }
       .event__container--info_event {
-        border: 1px solid blue;
-        height: 80%; }
+        height: 70%;
+        display: flex; }
+        .event__container--info_event-left {
+          padding-left: 40px;
+          width: 50%;
+          border-right: 1px solid #fe9a8b;
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          justify-content: center; }
+          .event__container--info_event-left-h5 {
+            color: #f5f5f5;
+            text-transform: uppercase;
+            font-size: 1.3rem;
+            letter-spacing: 1.5px;
+            font-weight: 300; }
+          .event__container--info_event-left-h2 {
+            text-transform: uppercase;
+            font-size: 2.75rem;
+            background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+            background-image: conic-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+            background-size: 100%;
+            -webkit-background-clip: text;
+            -moz-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            -moz-text-fill-color: transparent; }
+            .event__container--info_event-left-h2_second {
+              font-size: 2.2rem;
+              color: red; }
+            .event__container--info_event-left-h2_third {
+              font-size: 1.9rem;
+              color: red; }
+        .event__container--info_event-right {
+          border-left: .5px solid #fe9a8b;
+          width: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center; }
+          .event__container--info_event-right_content {
+            padding: 0px 40px;
+            color: #f5f5f5;
+            font-size: 1.5rem; }
 
 .blob {
   width: 150px;
@@ -187,28 +225,37 @@ body {
   border-radius: 100%;
   position: absolute;
   border: none;
-  left: 150px;
+  left: 145px;
   bottom: 10px;
   z-index: 1;
-  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%); }
+  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+  opacity: .8; }
   .blob:nth-child(2) {
-    width: 125px;
-    height: 125px;
+    width: 115px;
+    height: 115px;
     left: 600px;
     background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%);
     background-blend-mode: multiply, multiply;
-    top: 300px; }
+    top: 300px;
+    opacity: 1; }
   .blob:nth-child(3) {
     width: 100px;
     height: 100px;
     background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
     left: 950px;
-    bottom: 20px; }
+    bottom: 20px;
+    opacity: .9; }
 
 .second-section {
   width: 100%;
   height: 100vh;
-  background-color: white; }
+  background-color: white;
+  border: 1px solid blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .second-section > h1 {
+    font-size: 4rem; }
 
 @keyframes gradient {
   0% {
