--- a/sass/style.scss
+++ b/sass/style.scss
@@ -121,14 +121,7 @@ body {
     }
 
     &--events {
-      background: #a1c298;
-      background-image: linear-gradient(
-        to right,
-        #02aab0 0%,
-        #00cdac 51%,
-        #02aab0 100%
-      );
-
+   
       background-color: #ff9a8b;
 
       background-image: linear-gradient(
@@ -200,6 +193,7 @@ body {
       height: 30%;
       border-radius: 10px 10px 0px 0px;
       display: flex;
+      // border: 1px solid blue;
 
 
       &_name {
@@ -262,8 +256,77 @@ body {
       }
 
       &_event{
-        border: 1px solid blue;
-        height: 80%;
+        // border: 1px solid blue;
+        height: 70%;
+        display: flex;
+
+        &-left{
+          padding-left: 40px;
+          width: 50%;
+
+          
+          border-right: 1px solid #fe9a8b;
+          display: flex;
+          // border: 1px solid blue;
+          flex-direction: column;
+          gap: 20px;
+          justify-content: center;
+          // align-items: center;
+
+          &-h5{
+            color: $white-color;
+            text-transform: uppercase;
+            font-size: 1.3rem;
+            letter-spacing: 1.5px;
+            font-weight: 300;
+           
+          }
+
+          &-h2{
+
+            text-transform: uppercase;
+            font-size: 2.75rem;
+            background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+            background-image: conic-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+            background-size: 100%;  
+            -webkit-background-clip: text;
+            -moz-background-clip: text;
+            -webkit-text-fill-color: transparent; 
+            -moz-text-fill-color: transparent;
+
+
+            &_second{
+              font-size: 2.2rem;
+              color: red;
+            }
+
+            &_third{
+              font-size: 1.9rem;
+              color: red;
+            }
+    
+          }
+        
+        }
+
+        &-right{
+          border-left: .5px solid #fe9a8b;
+          // border-top: 1px solid #fe9a8b;
+
+
+          width: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          &_content{
+            padding: 0px 40px;
+            color: $white-color;
+            font-size: 1.5rem;
+
+
+          }
+        }
       }
     }
   }
@@ -277,7 +340,7 @@ body {
   border-radius: 100%;
   position: absolute;
   border: none;
-  left: 150px;
+  left: 145px;
   bottom: 10px;
   z-index: 1;
   background-image: linear-gradient(
@@ -286,10 +349,11 @@ body {
     #fad0c4 99%,
     #fad0c4 100%
   );
+  opacity: .8;
 
   &:nth-child(2) {
-    width: 125px;
-    height: 125px;
+    width: 115px;
+    height: 115px;
     left: 600px;
     background-image: linear-gradient(
       to right,
@@ -300,6 +364,7 @@ body {
     );
     background-blend-mode: multiply, multiply;
     top: 300px;
+    opacity: 1;
   }
 
   &:nth-child(3) {
@@ -309,6 +374,7 @@ body {
 
     left: 950px;
     bottom: 20px;
+    opacity: .9;
   }
 }
 
@@ -316,6 +382,14 @@ body {
   width: 100%;
   height: 100vh;
   background-color: white;
+  border: 1px solid blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & > h1 {
+    font-size: 4rem;
+  }
 }
 
 @keyframes gradient {
