--- a/css/style.css
+++ b/css/style.css
@@ -248,19 +248,76 @@ body {
 
 .second-section {
   width: 100%;
-  height: 100vh;
-  background-color: white;
-  border: 1px solid blue;
+  min-height: 200vh;
+  background-color: #2e2e2e;
   display: flex;
   flex-direction: column;
   align-items: center; }
-  .second-section > h1 {
-    font-size: 4rem; }
 
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%; }
-  50% {
-    background-position: 100% 50%; }
-  100% {
-    background-position: 0% 50%; } }
+.story {
+  width: 700px;
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center; }
+  .story > p {
+    margin-top: 50px;
+    font-size: 2rem;
+    font-weight: 600;
+    color: #f5f5f5; }
+
+.team {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 150px; }
+  .team__cards {
+    margin-top: 50px;
+    border: 1px solid red;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 0px 100px; }
+    .team__cards-con {
+      width: 300px;
+      height: 400px;
+      border: 1px solid red;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      color: #f5f5f5; }
+      .team__cards-con--overlay {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(0deg, black 7.5%, transparent 80%); }
+
+.title {
+  font-size: 4rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent; }
+
+.vibrant {
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+  background-image: linear-gradient(45deg, #ff9a8b 0%, #ff6a88 55%, #ff99ac 100%);
+  background-color: #8EC5FC;
+  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+  background-color: #FBAB7E;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent; }
