--- a/sass/style.scss
+++ b/sass/style.scss
@@ -380,26 +380,114 @@ body {
 
 .second-section {
   width: 100%;
-  height: 100vh;
-  background-color: white;
-  border: 1px solid blue;
+  min-height: 200vh;
+  background-color: rgb(46, 46, 46);
+
   display: flex;
   flex-direction: column;
   align-items: center;
+  // gap: 50px;
 
-  & > h1 {
-    font-size: 4rem;
+}
+
+.story{
+  width: 700px;
+  // height: 45%;
+  
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  align-items: center;
+  text-align: center;
+
+
+  & > p{
+    margin-top: 50px;
+    font-size: 2rem;
+    font-weight: 600;
+    color: $white-color;
+
   }
 }
 
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
+.team{
+
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-top: 150px;
+
+  &__cards{
+    margin-top: 50px;
+    border: 1px solid red;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 0px 100px;
+
+    &-con{
+      width: 300px;
+      height: 400px;
+      border: 1px solid red;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      color: $white-color;
+
+      &--overlay{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        // background: rgb(131,58,180);
+background: linear-gradient(0deg, rgba(0,0,0,1) 7.5%, transparent 80%);
+      }
+    }
   }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+
+
+}
+
+.title{
+
+    font-size: 4rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+    background-size: 100%;  
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+
+  
+}
+
+
+.vibrant{
+  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+
+  background-image: linear-gradient(
+    45deg,
+    #ff9a8b 0%,
+    #ff6a88 55%,
+    #ff99ac 100%
+  );
+  background-color: #8EC5FC;
+  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+  background-color: #FBAB7E;
+  background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+    
+  background-size: 100%;  
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent; 
+  -moz-text-fill-color: transparent;
+
 }
