--- a/sass/style.scss
+++ b/sass/style.scss
@@ -186,6 +186,7 @@ body {
     flex-direction: column;
 
     border: 3px solid #ff9a8b;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
 
     &--info {
@@ -253,6 +254,9 @@ body {
         background: #fe9a8b;
 
         clip-path: polygon(0 -1%, 103% -1%, 103% 103%, 27.5% 103%);
+
+        
+        
       }
 
       &_event{
@@ -382,7 +386,7 @@ body {
   width: 100%;
   min-height: 200vh;
   background-color: rgb(46, 46, 46);
-
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -394,12 +398,14 @@ body {
   width: 700px;
   // height: 45%;
   
-  border: 1px solid red;
+  // border: 1px solid red;
   display: flex;
   flex-direction: column;
   // justify-content: center;
   align-items: center;
   text-align: center;
+  position: relative;
+  z-index: 4;
 
 
   & > p{
@@ -407,6 +413,8 @@ body {
     font-size: 2rem;
     font-weight: 600;
     color: $white-color;
+    position: relative;
+    // filter: blur(10);
 
   }
 }
@@ -422,8 +430,9 @@ body {
   margin-top: 150px;
 
   &__cards{
-    margin-top: 50px;
-    border: 1px solid red;
+    margin-top: 75px;
+    // border: 1px solid red;
+
     width: 100%;
     height: 100%;
     display: flex;
@@ -434,19 +443,80 @@ body {
 
     &-con{
       width: 300px;
-      height: 400px;
-      border: 1px solid red;
+      height: 425px;
+      // border: 1px solid red;
+      border-radius: 10px;
       position: relative;
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
       color: $white-color;
+      text-align: center;
+
+      &-name{
+        position: relative;
+        z-index: 9999;
+        width: 100%;
+        // height: 20px;
+        // border: 1px solid red;
+        display: flex;
+        justify-content: center;
+        align-items:center;
+        margin-bottom: 10px;
+
+        & > svg {
+          width: 40px;
+          position: relative;
+          z-index: 10;
+          display: flex;
+          transition: all 2s ease;
+          cursor: pointer;
+
+
+          
+        
+        }
+
+
+      
+      & > h4 {
+        color: black;
+        font-weight: 300;
+        letter-spacing: 2.5px;
+        position: relative;
+        z-index: 5;
+        font-size: 2rem;
+        text-transform: uppercase;
+        // margin-bottom: 5px;
+
+      }
+
+      }
+
+      & > img {
+      border-radius: 10px;
+      position: relative;
+      z-index: 1;
+
+      }
+
+ 
+
+   
+    
 
       &--overlay{
+        border-radius: 10px;
+
         position: absolute;
+        z-index: 2;
         width: 100%;
         height: 100%;
         // background: rgb(131,58,180);
-background: linear-gradient(0deg, rgba(0,0,0,1) 7.5%, transparent 80%);
+        background: linear-gradient(0deg, #8ec5fc 15%, transparent 50%);
+        background: linear-gradient(0deg, #fe9a8b 12.5%, transparent 50%);
+
       }
     }
   }
@@ -458,8 +528,8 @@ background: linear-gradient(0deg, rgba(0,0,0,1) 7.5%, transparent 80%);
 
     font-size: 4rem;
     text-transform: uppercase;
-    letter-spacing: 2px;
-    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+    letter-spacing: 3px;
+    background-image: linear-gradient(62deg, hsl(22, 94%, 74%) 0%, hsl(43, 90%, 69%) 100%);
     background-size: 100%;  
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -467,6 +537,10 @@ background: linear-gradient(0deg, rgba(0,0,0,1) 7.5%, transparent 80%);
     -moz-text-fill-color: transparent;
 
   
+
+    &:nth-child(1){
+      background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+    }
 }
 
 
@@ -491,3 +565,26 @@ background: linear-gradient(0deg, rgba(0,0,0,1) 7.5%, transparent 80%);
   -moz-text-fill-color: transparent;
 
 }
+
+#sw-js-blob-svg{
+  position: absolute;
+  z-index: 0;
+  width: 175px;
+  bottom: -50px;
+  left: -200px;
+  filter: blur(4px);
+}
+
+
+
+#sw-js-blob-svg-s{
+  position: absolute;
+  z-index: 0;
+  width: 175px;
+  top: 50px;
+  right: -200px;
+  filter: blur(4px);
+}
+
+
+
