--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,8 @@ body {
         color: #f5f5f5;
         font-size: 2.5rem;
         background: #fe9a8b;
+        letter-spacing: 1px;
+        text-transform: uppercase;
         clip-path: polygon(0 -1%, 103% -1%, 103% 103%, 27.5% 103%); }
       .event__container--info_event {
         height: 70%;
@@ -182,6 +184,7 @@ body {
         .event__container--info_event-left {
           padding-left: 40px;
           width: 50%;
+          overflow: scroll;
           border-right: 1px solid #fe9a8b;
           display: flex;
           flex-direction: column;
@@ -214,7 +217,8 @@ body {
           width: 50%;
           display: flex;
           justify-content: center;
-          align-items: center; }
+          align-items: center;
+          overflow: scroll; }
           .event__container--info_event-right_content {
             padding: 0px 40px;
             color: #f5f5f5;
@@ -293,6 +297,7 @@ body {
       border-radius: 10px;
       position: relative;
       display: flex;
+      overflow: hidden;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
@@ -302,16 +307,19 @@ body {
         position: relative;
         z-index: 9999;
         width: 100%;
+        height: auto;
+        background-color: #8ec5fc;
+        background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+        height: 52px;
+        border-radius: 0px 0px 10px 10px;
         display: flex;
         justify-content: center;
-        align-items: center;
-        margin-bottom: 10px; }
-        .team__cards-con-name > svg {
-          width: 40px;
+        align-items: center; }
+        .team__cards-con-name > a {
+          width: 25px;
           position: relative;
           z-index: 10;
           display: flex;
-          transition: all 2s ease;
           cursor: pointer; }
         .team__cards-con-name > h4 {
           color: black;
@@ -322,17 +330,30 @@ body {
           font-size: 2rem;
           text-transform: uppercase; }
       .team__cards-con > img {
-        border-radius: 10px;
+        border-radius: 10px 10px 0px 0px;
         position: relative;
-        z-index: 1; }
+        z-index: 1;
+        filter: grayscale(100%);
+        -webkit-filter: grayscale(100%);
+        transition: all .3s ease; }
+        .team__cards-con > img:hover {
+          filter: grayscale(0);
+          -webkit-filter: grayscale(0);
+          transform: scale(1.1); }
       .team__cards-con--overlay {
         border-radius: 10px;
         position: absolute;
         z-index: 2;
         width: 100%;
         height: 100%;
-        background: linear-gradient(0deg, #8ec5fc 15%, transparent 50%);
-        background: linear-gradient(0deg, #fe9a8b 12.5%, transparent 50%); }
+        background: linear-gradient(0deg, #c4c3fb 15%, transparent 50%); }
+
+.third-section {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 .title {
   font-size: 4rem;
@@ -346,13 +367,15 @@ body {
   -moz-text-fill-color: transparent; }
   .title:nth-child(1) {
     background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%); }
+  .title:nth-child(2) {
+    background-image: linear-gradient(to right, #434343 0%, black 100%); }
+
+.sub-title {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 2px; }
 
 .vibrant {
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-  background-image: linear-gradient(45deg, #ff9a8b 0%, #ff6a88 55%, #ff99ac 100%);
-  background-color: #8EC5FC;
-  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-  background-color: #FBAB7E;
   background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
   background-size: 100%;
   -webkit-background-clip: text;
